--- a/templates/index.html
+++ b/templates/index.html
@@ -24,18 +24,19 @@
         <button class="tab" data-tab="defense">🛡 防御</button>
     </div>
 
-    <table id="resultTable">
+    <!--<table id="resultTable">-->
+    <table class="effect-summary">
         <thead>
         <tr>
             <th>対象</th>
             <th>効果内容</th>
-            <th>効果区分</th>
-            <th>合計</th>
+            <th>区分</th>
+            <th>合算</th>
             <th>上限</th>
-            <th>有効</th>
+            <th>適用</th>
         </tr>
         </thead>
-        <tbody></tbody>
+        <tbody id="effect-summary-body"></tbody>
     </table>
     </div>
   </div>
