fix tooltip bug

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,8 @@
   <link rel="stylesheet" href="/static/style.css" type="text/css">
 </head>
 <body>
+  <div id="global-tooltip" role="tooltip"></div>
+
   <div class="app">
     
   <header class="app-header">
@@ -94,8 +96,10 @@
         <section>
           <h3>概要</h3>
           <p>
-            本ツールは「オクトパストラベラー 大陸の覇者」における
-            バフ・デバフ効果を整理・合算して確認するための補助ツールです。
+            本ツールは「オクトパストラベラー 大陸の覇者」における<br>
+            バフ・デバフ効果を整理・合算して確認するための補助ツールです。<br>
+            <br>
+            
           </p>
         </section>
 
@@ -110,16 +114,16 @@
         <section>
           <h3>完成度について</h3>
           <p>
-            新仕様に対応しきれていない点や細かいバグは取り切れていないところなど
-            ご了承いただけますと幸いです。
-
-            現状設定ボタンは効かないですが、そのうち何かしら追加するつもりです。
-            （キャラリストの事前選択や、キャラ・アビリティ設定状態の保存など）
-            
-            大きなバグや改善要望などありましたら、以下Xのアカウントまでご連絡ください。
+            新仕様に対応しきれていない点や細かいバグは取り切れていないところなど<br>
+            ご了承いただけますと幸いです。<br>
+            <br>
+            現状設定ボタンは効かないですが、そのうち何かしら追加するつもりです。<br>
+            （キャラリストの事前選択や、キャラ・アビリティ設定状態の保存など）<br>
+            <br>
+            大きなバグや改善要望などありましたら、以下Xのアカウントまでご連絡ください。<br>
+            <a class="a-link" href="https://x.com/syura_krm" target="_blank">@syura_krm</a>
           </p>
         </section>
-        <a class="a-link" href="https://x.com/syura_krm" target="_blank">@syura_krm</a>
 
         <section class="note">
           <p>
