--- a/templates/index.html
+++ b/templates/index.html
@@ -111,6 +111,7 @@
           <ul>
             <li>表示される数値は効果量の理論上の合算結果です</li>
             <li>ゲーム内挙動と完全一致を保証するものではありません</li>
+            <li>フィルタ項目(下線あり)や計算結果部分は、スマホやタブレットはタップで、PCはマウスオーバーで詳細説明が出て来ます</li>
           </ul>
         </section>
 
