--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>大陸の覇者　バフシミュレータ</title>
-  <link rel="stylesheet" href="/static/style.css" type="text/css">
+  <link rel="stylesheet" href="/static/style.css?v=20260128" type="text/css">
 </head>
 <body>
   <div id="global-tooltip" role="tooltip"></div>
@@ -77,7 +77,7 @@
 
       <div class="modal-footer">
         <button id="modalCancelBtn">キャンセル</button>
-        <button id="modalOkBtn">OK</button>
+        <button id="modalOkBtn">適用</button>
       </div>
     </div>
   </div>
@@ -159,7 +159,7 @@
         </div>
 
         <div class="footer-right">
-          <button id="settingsModalCancelBtn">閉じる</button>
+          <button id="settingsModalCancelBtn">キャンセル</button>
           <button id="settingsModalOkBtn">適用</button>
         </div>
       </div>
@@ -167,11 +167,11 @@
     </div>
   </div>
 
-  <script src="/static/constants.js"></script>
-  <script src="/static/state.js"></script>
-  <script src="/static/ui_render.js"></script>
-  <script src="/static/ui_handlers.js"></script>
-  <script src="/static/app.js"></script>
+  <script src="/static/constants.js?v=20260128"></script>
+  <script src="/static/state.js?v=20260128"></script>
+  <script src="/static/ui_render.js?v=20260128"></script>
+  <script src="/static/ui_handlers.js?v=20260128"></script>
+  <script src="/static/app.js?v=20260128"></script>
 </body>
 
 </html>
