--- a/templates/index.html
+++ b/templates/index.html
@@ -129,6 +129,23 @@
           </p>
         </section>
 
+        <section>
+          <h3>変更履歴</h3>
+          <p>
+            <b>2026/01/28</b><br>
+            ・「属性ダメージアップ」の効果を結果に追加<br>
+            ・「属性攻撃でクリティカルが発生するようになる」の効果を結果欄に追加<br>
+            ・「弱点を突いたときのダメージアップX%」の効果を結果欄に追加<br>
+            ・「ダメージ上限アップ」「必ずクリティカル」「威力アップ」は全て結果欄でバトアビ枠として表示するよう変更<br>
+            ・「バディ」が対象の効果は対象キャラが誰であっても結果欄に含めるよう変更<br>
+            ・「バトアビによるXXXの上限がX%になる」のサポアビ効果が、結果欄でサポアビ枠に反映されていたバグを修正<br>
+            ・「前衛と後衛に」と記載された効果が結果欄に表示されないバグを修正<br>
+            ・一部全角%を含む効果が結果欄に表示されないバグを修正<br>
+            ・複数の物理/属性を同時に付与する効果が一部結果欄へ反映されないバグを修正<br>
+            ・一部アビリティで存在しない「物理耐性ダウン」「属性耐性ダウン」の効果が結果欄に表示されてしまうバグを修正<br>
+          </p>
+        </section>
+        
         <section class="note">
           <p>
             ※ 本ツールは非公式の解析・補助ツールです。
@@ -167,11 +184,11 @@
     </div>
   </div>
 
-  <script src="/static/constants.js?v=20260128"></script>
-  <script src="/static/state.js?v=20260128"></script>
-  <script src="/static/ui_render.js?v=20260128"></script>
-  <script src="/static/ui_handlers.js?v=20260128"></script>
-  <script src="/static/app.js?v=20260128"></script>
+  <script src="/static/constants.js?v=20260129"></script>
+  <script src="/static/state.js?v=20260129"></script>
+  <script src="/static/ui_render.js?v=20260129"></script>
+  <script src="/static/ui_handlers.js?v=20260129"></script>
+  <script src="/static/app.js?v=20260129"></script>
 </body>
 
 </html>
