fix placeholder bug

--- a/templates/index.html
+++ b/templates/index.html
@@ -184,7 +184,7 @@
     </div>
   </div>
 
-  <script src="/static/constants.js?v=20260129"></script>
+  <script src="/static/constants.js?v=20260129_2"></script>
   <script src="/static/state.js?v=20260129"></script>
   <script src="/static/ui_render.js?v=20260129"></script>
   <script src="/static/ui_handlers.js?v=20260129"></script>
