--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>大陸の覇者　バフシミュレータ</title>
-  <link rel="stylesheet" href="/static/style.css?v=20260128" type="text/css">
+  <link rel="stylesheet" href="/static/style.css?v=20260131" type="text/css">
 </head>
 <body>
   <div id="global-tooltip" role="tooltip"></div>
@@ -132,6 +132,11 @@
         <section>
           <h3>変更履歴</h3>
           <p>
+            <b>2026/01/31</b><br>
+            ・バフ・デバフの上限を変更する効果を設定画面で個別項目に切り出し<br>
+            ・ハイライト設定時、キャラ選択を対象キャラに絞る機能を追加<br>
+            ・スマホで使い続けると画面がハングする事象に対応（解消してない可能性もあり）<br>
+            <br>
             <b>2026/01/28</b><br>
             ・「属性ダメージアップ」の効果を結果に追加<br>
             ・「属性攻撃でクリティカルが発生するようになる」の効果を結果欄に追加<br>
@@ -184,10 +189,10 @@
     </div>
   </div>
 
-  <script src="/static/constants.js?v=20260129_2"></script>
-  <script src="/static/state.js?v=20260129"></script>
-  <script src="/static/ui_render.js?v=20260129"></script>
-  <script src="/static/ui_handlers.js?v=20260129"></script>
+  <script src="/static/constants.js?v=20260131"></script>
+  <script src="/static/state.js?v=20260131"></script>
+  <script src="/static/ui_render.js?v=20260131"></script>
+  <script src="/static/ui_handlers.js?v=20260131"></script>
   <script src="/static/app.js?v=20260129"></script>
 </body>
 
