--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>大陸の覇者　バフシミュレータ</title>
   <link rel="stylesheet" href="/static/style.css?v=20260131" type="text/css">
+  <link rel="icon" href="/static/favicon/favicon.ico">
 </head>
 <body>
   <div id="global-tooltip" role="tooltip"></div>
